# FormalizeWithTest

./: .gitignore  FormalizeWithTest.lean  Main.lean  README.md  code_contests_sample_train_short.jsonl  lake-manifest.json  lakefile.lean  load_data.py  pyproject.toml  translate.py  verify.py
